#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_LANG([C++])
AC_INIT([ModelicaCC], [0.1], [fedebergero@gmail.com])
AC_CONFIG_MACRO_DIR([macros])
m4_include([macros/ax_boost_base.m4])
m4_include([macros/ax_cxx_compile_stdcxx.m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AX_CXX_COMPILE_STDCXX(11,noext,mandatory)
AX_CXX_COMPILE_STDCXX(14,noext,mandatory)
AX_CXX_COMPILE_STDCXX(17,noext,mandatory)

# Checks for libraries.
AC_LANG([C++])
AC_CHECK_HEADERS([ginac/ginac.h],[],[AC_MSG_ERROR([ModelicaCC needs libginac.])],[])

# Checks for header files.
AX_BOOST_BASE(["1.71"],[], AC_MSG_ERROR([ModelicaCC needs boost library.]))
AC_FUNC_ALLOCA
AC_CHECK_HEADERS([malloc.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([bzero])

AC_CHECK_PROGS([DOXYGEN], [doxygen])
if test -z "$DOXYGEN";
   then AC_MSG_WARN([Doxygen not found - continuing without Doxygen support])
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
